[gd_scene load_steps=10 format=3 uid="uid://b3u0j66gmm7y7"]

[ext_resource type="Script" path="res://OverworldContent/cooler.gd" id="1_6nvhl"]
[ext_resource type="Texture2D" uid="uid://bvt0ltf1ro708" path="res://Textures/pixel_assets/Cooler.png" id="1_u0bbq"]
[ext_resource type="Texture2D" uid="uid://mfeo6a3lemso" path="res://Textures/pixel_assets/Cooler Open.png" id="2_5b5k7"]
[ext_resource type="PackedScene" uid="uid://dxhku6mb4mds3" path="res://OverworldContent/Enemy/OverworldEnemy.tscn" id="2_gi23b"]
[ext_resource type="AudioStream" uid="uid://dmcvjwpnvvn8v" path="res://audio/sound effects/OpenCooler.wav" id="5_2himh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1s6dr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u0bbq")
}],
"loop": true,
"name": &"closed",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5b5k7")
}],
"loop": true,
"name": &"open",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_70lsb"]
radius = 33.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83jos"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71req"]

[node name="Cooler" type="Node2D"]
script = ExtResource("1_6nvhl")
enemy_scene = ExtResource("2_gi23b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1s6dr")
animation = &"closed"

[node name="interactable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactable_area"]
shape = SubResource("CircleShape2D_70lsb")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_83jos")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="UpLeft" type="Node2D" parent="SpawnPoints"]
position = Vector2(-18, -18)

[node name="Area2D" type="Area2D" parent="SpawnPoints/UpLeft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/UpLeft/Area2D"]
shape = SubResource("RectangleShape2D_71req")

[node name="Marker2D" type="Marker2D" parent="SpawnPoints/UpLeft"]

[node name="UpRight" type="Node2D" parent="SpawnPoints"]
position = Vector2(18, -18)

[node name="Area2D" type="Area2D" parent="SpawnPoints/UpRight"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/UpRight/Area2D"]
shape = SubResource("RectangleShape2D_71req")

[node name="Marker2D" type="Marker2D" parent="SpawnPoints/UpRight"]

[node name="DownLeft" type="Node2D" parent="SpawnPoints"]
position = Vector2(-18, 18)

[node name="Area2D" type="Area2D" parent="SpawnPoints/DownLeft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/DownLeft/Area2D"]
shape = SubResource("RectangleShape2D_71req")

[node name="Marker2D" type="Marker2D" parent="SpawnPoints/DownLeft"]

[node name="DownRight" type="Node2D" parent="SpawnPoints"]
position = Vector2(18, 18)

[node name="Area2D" type="Area2D" parent="SpawnPoints/DownRight"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/DownRight/Area2D"]
shape = SubResource("RectangleShape2D_71req")

[node name="Marker2D" type="Marker2D" parent="SpawnPoints/DownRight"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2himh")
bus = &"sfx"

[connection signal="body_entered" from="interactable_area" to="." method="_on_interactable_area_body_entered"]
[connection signal="body_exited" from="interactable_area" to="." method="_on_interactable_area_body_exited"]
